--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.19",
+    "axios-mock-adapter": "^1.20.0",
     "eslint": "^8.6.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1"
